--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="..." />
                         </div>
+                        <h5 class="text-center">Lab 1</h5>h5>
                     </div>
                     <!-- Portfolio Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -265,7 +266,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Log Cabin</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 1</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
