--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="..." />
                         </div>
-                        <h5 class="text-center">Lab 1</h5>h5>
+                        <h5 class="text-center">Lab 1</h5>
                     </div>
                     <!-- Portfolio Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -82,6 +82,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/cake.png" alt="..." />
                         </div>
+                        <h5 class="text-center">Lab 2</h5>
                     </div>
                     <!-- Portfolio Item 3-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -91,6 +92,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/circus.png" alt="..." />
                         </div>
+                        <h5 class="text-center">Lab 3</h5>
                     </div>
                     <!-- Portfolio Item 4-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
@@ -100,6 +102,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/game.png" alt="..." />
                         </div>
+                        <h5 class="text-center">Lab 4</h5>
                     </div>
                     <!-- Portfolio Item 5-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
@@ -109,6 +112,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/safe.png" alt="..." />
                         </div>
+                        <h5 class="text-center">Lab 5</h5>
                     </div>
                     <!-- Portfolio Item 6-->
                     <div class="col-md-6 col-lg-4">
@@ -118,6 +122,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="..." />
                         </div>
+                        <h5 class="text-center">Lab 6</h5>
                     </div>
                 </div>
             </div>
