--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="..." />
                         </div>
-                        <h5 class="text-center">Lab 1</h5>
+                        <h5 class="text-center">Lab 1: The Artemis Board</h5>
                     </div>
                     <!-- Portfolio Item 2-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -271,7 +271,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 1</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 1: The Artemis Board</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -281,7 +281,11 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cabin.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                    <p class="mb-4">The goal of Lab 1 is to set up and become familiar with the Arduino IDE and the Artemis board.  Specifically, this involves becoming comfortable programming the Artemis board, using the board LED, reading/writing serial messages over USB, and using the onboard temperature sensor and Pulse Density Microphone.
+                                        Hardware:
+                                        1 x SparkFun RedBoard Artemis Nano
+                                        1 x USB C-to-C or A-to-C cable
+                                        </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
