--- a/index.html
+++ b/index.html
@@ -281,9 +281,11 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cabin.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">The goal of Lab 1 is to set up and become familiar with the Arduino IDE and the Artemis board.  Specifically, this involves becoming comfortable programming the Artemis board, using the board LED, reading/writing serial messages over USB, and using the onboard temperature sensor and Pulse Density Microphone.
-                                        Hardware:
-                                        1 x SparkFun RedBoard Artemis Nano
+                                    <p class="mb-4">The goal of Lab 1 is to set up and become familiar with the Arduino IDE and the Artemis board. Specifically, this 
+                                        involves becoming comfortable programming the Artemis board, using the board LED, reading/writing serial messages over USB, and 
+                                        using the onboard temperature sensor and Pulse Density Microphone. <br>
+                                        Hardware:<br>
+                                        1 x SparkFun RedBoard Artemis Nano<br>
                                         1 x USB C-to-C or A-to-C cable
                                         </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
