--- a/index.html
+++ b/index.html
@@ -281,12 +281,22 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cabin.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">The goal of Lab 1 is to set up and become familiar with the Arduino IDE and the Artemis board. Specifically, this 
-                                        involves becoming comfortable programming the Artemis board, using the board LED, reading/writing serial messages over USB, and 
+                                    <p class="mb-4">
+                                        The goal of Lab 1 is to set up and become familiar with the Arduino IDE and the Artemis board. Specifically, this involves 
+                                        becoming comfortable programming the Artemis board, using the board LED, reading/writing serial messages over USB, and 
                                         using the onboard temperature sensor and Pulse Density Microphone. <br>
+                                        <br>
                                         Hardware:<br>
                                         1 x SparkFun RedBoard Artemis Nano<br>
-                                        1 x USB C-to-C or A-to-C cable
+                                        1 x USB C-to-C or A-to-C cable<br>
+                                        <br>
+                                        Software:<br>
+                                        Arduino IDE<br>
+                                        <br>
+                                        Example: Blink it Up<br>
+                                        After hooking up the Artemis Board and following installation instructions for Arduino, I first ran the program “Example: 
+                                        Blink it Up” to ensure that the LED on the Artemis Board was working properly.  I also lowered the baud rate to 115200 bits/s 
+                                        to get the example to work. 
                                         </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
