--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/cake.png" alt="..." />
                         </div>
-                        <h5 class="text-center">Lab 2</h5>
+                        <h5 class="text-center">Lab 2: Bluetooth communication</h5>
                     </div>
                     <!-- Portfolio Item 3-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -92,7 +92,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/circus.png" alt="..." />
                         </div>
-                        <h5 class="text-center">Lab 3</h5>
+                        <h5 class="text-center">Lab 3: TOF</h5>
                     </div>
                     <!-- Portfolio Item 4-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
@@ -102,7 +102,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/game.png" alt="..." />
                         </div>
-                        <h5 class="text-center">Lab 4</h5>
+                        <h5 class="text-center">Lab 4: IMU</h5>
                     </div>
                     <!-- Portfolio Item 5-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
@@ -112,7 +112,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/safe.png" alt="..." />
                         </div>
-                        <h5 class="text-center">Lab 5</h5>
+                        <h5 class="text-center">Lab 5: Motor Driver and Open Loop Control</h5>
                     </div>
                     <!-- Portfolio Item 6-->
                     <div class="col-md-6 col-lg-4">
@@ -122,7 +122,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="..." />
                         </div>
-                        <h5 class="text-center">Lab 6</h5>
+                        <h5 class="text-center">Lab 6: PID Speed Control</h5>
                     </div>
                 </div>
             </div>
@@ -295,8 +295,23 @@
                                         <br>
                                         Example: Blink it Up<br>
                                         After hooking up the Artemis Board and following installation instructions for Arduino, I first ran the program “Example: 
-                                        Blink it Up” to ensure that the LED on the Artemis Board was working properly.  I also lowered the baud rate to 115200 bits/s 
-                                        to get the example to work. 
+                                        Blink it Up” to ensure that the LED on the Artemis Board was working properly. I also lowered the baud rate to 115200 bits/s 
+                                        to get the example to work.<br> 
+                                        <br>
+                                        Example4_Serial:
+                                        I uploaded code from File->Examples->Artemis Examples->Example4_Serial to test the serial communication between the Artemis 
+                                        board and the computer, which was shown in the serial monitor. It also allowed the user to provide an input, which would then 
+                                        be echoed back as the output.<br>  
+                                        <br>
+                                        Example2_AnalogRead:
+                                        To test the temperature sensor, I uploaded code from “File->Examples->Artemis Examples->Example2_analogRead”. In the video, 
+                                        whenever my thumb wasn’t on the chip, the temperature values were in the 4000s range.  Whenever my thumb pressed on the chip, 
+                                        the readings shot up into the 20000s range.<br>
+                                        <br>
+                                        Example1_MicrophoneOutput:<br>
+                                        To test the microphone, I uploaded code from “File->Examples->PDM->Example1_MicrophoneOutput”. From there, I used an online note 
+                                        generator to play the note A4, which has the frequency of 440 Hz.  The serial monitor printed out that the microphone detected a 
+                                        frequency of 434 Hz, which was very close to 440 Hz.<br> 
                                         </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
@@ -319,7 +334,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Tasty Cake</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 2: Bluetooth communication</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -351,7 +366,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Circus Tent</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 3: TOF</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -383,7 +398,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Controller</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 4: IMU</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -415,7 +430,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Locked Safe</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 5: Motor Driver and Open Loop Control</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -447,7 +462,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Submarine</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 6: PID Speed Control</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
