--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/cake.png" alt="..." />
                         </div>
-                        <h5 class="text-center">Lab 2: Bluetooth communication</h5>
+                        <h5 class="text-center">Lab 8: Stunts</h5>
                     </div>
                     <!-- Portfolio Item 9-->
                     <div class="col-md-6 col-lg-4 mb-5">
@@ -152,7 +152,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/circus.png" alt="..." />
                         </div>
-                        <h5 class="text-center">Lab 3: TOF</h5>
+                        <h5 class="text-center">Lab 9: Mapping (Real)</h5>
                     </div>
                     <!-- Portfolio Item 10-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
@@ -162,7 +162,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/game.png" alt="..." />
                         </div>
-                        <h5 class="text-center">Lab 4: IMU</h5>
+                        <h5 class="text-center">Lab 10: Localization (Sim)</h5>
                     </div>
                     <!-- Portfolio Item 11-->
                     <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
@@ -172,7 +172,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/safe.png" alt="..." />
                         </div>
-                        <h5 class="text-center">Lab 5: Motor Driver and Open Loop Control</h5>
+                        <h5 class="text-center">Lab 11: Localization (Real)</h5>
                     </div>
                     <!-- Portfolio Item 12-->
                     <div class="col-md-6 col-lg-4">
@@ -182,7 +182,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="..." />
                         </div>
-                        <h5 class="text-center">Lab 6: PID Speed Control</h5>
+                        <h5 class="text-center">Lab 12: Planning and Execution</h5>
                     </div>                    
                 </div>
             </div>
@@ -586,7 +586,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 8: PID Speed Control</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 8: Stunts</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -618,7 +618,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 9: Motor Driver and Open Loop Control</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 9: Mapping (Real)</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -650,7 +650,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 10: PID Speed Control</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 10: Localization (Sim)</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -682,7 +682,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 11: Motor Driver and Open Loop Control</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 11: Localization (Real)</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -714,7 +714,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 12: PID Speed Control</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Lab 12: Planning and Execution</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
