--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="..." />
                         </div>
-                        <h5 class="text-center">Lab 1: The Artemis Board</h5>
+                        <h5 class="text-center">Lab 7: Kalman Filters (Sensor Fusion)</h5>
                     </div>
                     <!-- Portfolio Item 8-->
                     <div class="col-md-6 col-lg-4 mb-5">
