--- a/index.html
+++ b/index.html
@@ -346,29 +346,29 @@
                                         becoming comfortable programming the Artemis board, using the board LED, reading/writing serial messages over USB, and 
                                         using the onboard temperature sensor and Pulse Density Microphone. <br>
                                         <br>
-                                        Hardware:<br>
+                                        <b>Hardware:</b><br>
                                         1 x SparkFun RedBoard Artemis Nano<br>
                                         1 x USB C-to-C or A-to-C cable<br>
                                         <br>
-                                        Software:<br>
+                                        <b>Software:</b><br>
                                         Arduino IDE<br>
                                         <br>
-                                        Example: Blink it Up<br>
+                                        <b>Example: Blink it Up</b><br>
                                         After hooking up the Artemis Board and following installation instructions for Arduino, I first ran the program “Example: 
                                         Blink it Up” to ensure that the LED on the Artemis Board was working properly. I also lowered the baud rate to 115200 bits/s 
                                         to get the example to work.<br> 
                                         <br>
-                                        Example4_Serial<br>
+                                        <b>Example4_Serial</b><br>
                                         I uploaded code from File->Examples->Artemis Examples->Example4_Serial to test the serial communication between the Artemis 
                                         board and the computer, which was shown in the serial monitor. It also allowed the user to provide an input, which would then 
                                         be echoed back as the output.<br>  
                                         <br>
-                                        Example2_AnalogRead<br>
+                                        <b>Example2_AnalogRead</b><br>
                                         To test the temperature sensor, I uploaded code from “File->Examples->Artemis Examples->Example2_analogRead”. In the video, 
                                         whenever my thumb wasn’t on the chip, the temperature values were in the 4000s range.  Whenever my thumb pressed on the chip, 
                                         the readings shot up into the 20000s range.<br>
                                         <br>
-                                        Example1_MicrophoneOutput<br>
+                                        <b>Example1_MicrophoneOutput</b><br>
                                         To test the microphone, I uploaded code from “File->Examples->PDM->Example1_MicrophoneOutput”. From there, I used an online note 
                                         generator to play the note A4, which has the frequency of 440 Hz.  The serial monitor printed out that the microphone detected a 
                                         frequency of 434 Hz, which is very close to 440 Hz.<br> 
