--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cabin.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">
+                                        <b>Objective:</b><br>
                                         The goal of Lab 1 is to set up and become familiar with the Arduino IDE and the Artemis board. Specifically, this involves 
                                         becoming comfortable programming the Artemis board, using the board LED, reading/writing serial messages over USB, and 
                                         using the onboard temperature sensor and Pulse Density Microphone. <br>
@@ -357,6 +358,7 @@
                                         After hooking up the Artemis Board and following installation instructions for Arduino, I first ran the program “Example: 
                                         Blink it Up” to ensure that the LED on the Artemis Board was working properly. I also lowered the baud rate to 115200 bits/s 
                                         to get the example to work.<br> 
+                                        <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cabin.png" alt="..." />
                                         <br>
                                         <b>Example4_Serial</b><br>
                                         I uploaded code from File->Examples->Artemis Examples->Example4_Serial to test the serial communication between the Artemis 
