--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cabin.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="artemislab_cover.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">
                                         <b>Objective:</b><br>
