--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="..." />
+                            <img class="img-fluid" src="artemislab_cover.png" alt="..." />
                         </div>
                         <h5 class="text-center">Lab 1: The Artemis Board</h5>
                     </div>
@@ -364,6 +364,7 @@
                                         I uploaded code from File->Examples->Artemis Examples->Example4_Serial to test the serial communication between the Artemis 
                                         board and the computer, which was shown in the serial monitor. It also allowed the user to provide an input, which would then 
                                         be echoed back as the output.<br>  
+                                        <img class="img-fluid rounded mb-5" src="artemislab_serial.png" alt="..." />
                                         <br>
                                         <b>Example2_AnalogRead</b><br>
                                         To test the temperature sensor, I uploaded code from “File->Examples->Artemis Examples->Example2_analogRead”. In the video, 
