--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
                                         To test the microphone, I uploaded code from “File->Examples->PDM->Example1_MicrophoneOutput”. From there, I used an online note 
                                         generator to play the note A4, which has the frequency of 440 Hz.  The serial monitor printed out that the microphone detected a 
                                         frequency of 434 Hz, which is very close to 440 Hz.<br> 
+                                        <iframe width="420" height="345" src="https://youtu.be/uQum4yToBSE"></iframe>
                                         </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
